2005-04-18 Magnus Hagdorn
 * setup.py: bump version to 0.3
 * CF_area.py: change scaling of linear projections to 10km
 * plotEISvar.py: bug fix
 * plotProfile.py: move plot to right to make space for lables

2005-04-13 Magnus Hagdorn
 * plotCFvar.py: added switch to plot velo glyphs

2005-04-01 Magnus Hagdorn
 * CF_createfile.py: added 'VARSET' to list of non-variables for test.nc file

2005-03-29 Magnus Hagdorn
 * plotCFvar.py: plot velo fields for number of files

2005-03-23 Magnus Hagdorn
 * create_topo.py: fixed bug where the velo grid has the wrong origin
 * CF_loadfile.py: add option to interpolate onto velocity grid
 * CF_area.py: add option to illuminate images to give impression of a 3D surface,
   we also use basal velo fields for vector plots, add illumination to land option,
   fix profile plotting bug
 * CF_options.py: add illumination option, rename spot option to --ij
 * plotCFvar.py: hook up illumination

2005-03-12 Magnus Hagdorn
 * setup.py: bump version to 0.2
 * CF_createfile.py: fix minor bug
 * CF_loadfile.py: add method to clone a CF file

2005-03-12 Magnus Hagdorn
 * CF_diff.py, plotCFdiff.py: minor improvements

2005-03-09 Magnus Hagdorn
 * plotProfileTS.py: add ice extend to plot
 * CF_diff.py: plotting area for displaying difference between two CF files as a time
   series
 * plotCFdiff.py: simple program using CF_diff.py
 * setup.py, __init__.py: hooked up new files

2005-03-07 Magnus Hagdorn
 * bumped version to 0.1
 * CF_profile.py: disabled caching for now (we run out of memory for large files)
 * plotCFstats.py: close file after we've used it
 * plotProfileTS.py: add simpe profiles at beginning and end of period
 * plotStreams.py: centre period on time slice
 * sort out distribution of files in progs and data

2005-03-04 Magnus Hagdorn
 * plotCFvar.py: fixed bug with checking profile options
 * glide_launch.py moved to glimmer

2005-02-15 Magnus Hagdorn
 * CF_options.py: fix bug where interval is not set for profiles